# kontakt-server

./: .buildpacks  .dockerignore  Cargo.toml  Dockerfile  Makefile  Procfile  README.md  build.rs  deploy.sh  main.go
.cargo/: config
protos/: .gitignore  lib.rs  main.proto
release/: main
src/: main.rs
