cargo-features = ["edition"]
[package]
name = "kontakt-server"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "protos"
path = "protos/lib.rs"

[dependencies]
colored = "1.6"
env_logger = "0.5.11"
failure = "0.1.2"
failure_derive = "0.1.1"
futures = "0.1.23"
json = "0.11.13"
log = "0.4.3"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
toml = "0.4.6"
protobuf = "2.0.4"
grpcio = "0.3.0"

[build-dependencies]
protoc-grpcio = "0.2.0"