cargo-features = ["edition"]

[package]
authors = ["Shady Khalifa <shekohex@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "kontakt-server"
version = "0.1.0"

[build-dependencies]
protoc-grpcio = "0.2.0"

[dependencies]
colored = "1.6"
env_logger = "0.5.11"
failure = "0.1.2"
failure_derive = "0.1.1"
futures = "0.1.23"
grpcio = { version = "0.3", default-features = false, features = ["protobuf-codec"] }
json = "0.11.13"
log = "0.4.3"
lazy_static = "*"
protobuf = "2.0.4"
rand = "*"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
toml = "0.4.6"

[lib]
name = "protos"
path = "protos/lib.rs"
